force-app/main/default/objects/MUSW__GISSettings__c/MUSW__GISSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration for GIS interface</description>
    <label>GIS Settings</label>
</CustomObject>