force-app/main/default/objects/MUSW__GISSettings__c/fields/MUSW__AllowCallouts__c.field-meta.xml
<CustomField>
    <fullName>MUSW__AllowCallouts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Callouts are permitted to configured GIS REST services</description>
    <inlineHelpText>If true, callouts are permitted to call external GIS REST services (ensure they hosted as valid Remote Sites)</inlineHelpText>
    <label>Allow Callouts</label>
    <type>Checkbox</type>
</CustomField>