force-app/main/default/objects/MUSW__GISSettings__c/fields/MUSW__GeoCodeService__c.field-meta.xml
<CustomField>
    <fullName>MUSW__GeoCodeService__c</fullName>
    <inlineHelpText>URL for the GeoCode REST Service (include any default parameters)
eg. http://sampleserver1.arcgisonline.com/ArcGIS/rest/services/Locators/ESRI_Geocode_USA/GeocodeServer/findAddressCandidates?Address=</inlineHelpText>
    <label>DefaultGeoCodeService</label>
    <length>255</length>
    <type>Text</type>
</CustomField>