force-app/main/default/objects/MUSW__GISSettings__c/fields/MUSW__ParcelQueryFields__c.field-meta.xml
<CustomField>
    <fullName>MUSW__ParcelQueryFields__c</fullName>
    <defaultValue>"PARCELID"</defaultValue>
    <inlineHelpText>Parcel field containing the parcel number eg. Name
or PARCELID
or Name,PARCELID</inlineHelpText>
    <label>ParcelQueryFields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>