force-app/main/default/objects/MUSW__GISSettings__c/fields/MUSW__ParcelQueryService__c.field-meta.xml
<CustomField>
    <fullName>MUSW__ParcelQueryService__c</fullName>
    <inlineHelpText>The Map Server Parcel Layer Query REST Service (incl. default params) Layer must contain Parcel Number
eg. http://host/ArcGIS/rest/services/Louisville/LOJIC_LandRecords_Louisville/MapServer/0/query?returnGeometry=true&amp;geometryType=esriGeometryPoint&amp;text=</inlineHelpText>
    <label>ParcelQueryService</label>
    <length>255</length>
    <type>Text</type>
</CustomField>